// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GamblerTipPanel > renders collapsed by default and matches snapshot 1`] = `
"<section data-v-657a4615="" class="gambler-panel card" aria-labelledby="gambler-title">
  <header data-v-657a4615="" style="display: flex; align-items: center; justify-content: space-between; gap: 8px;">
    <h3 data-v-657a4615="" id="gambler-title" style="margin: 0px; font-weight: 700;">Zocker-Tipp</h3><button data-v-657a4615="" class="btn" aria-expanded="false"><span data-v-657a4615="">Anzeigen</span></button>
  </header>
  <!--v-if-->
</section>"
`;

exports[`GamblerTipPanel > toggles and preserves state in UI store during session 1`] = `
"<section data-v-657a4615="" class="gambler-panel card" aria-labelledby="gambler-title">
  <header data-v-657a4615="" style="display: flex; align-items: center; justify-content: space-between; gap: 8px;">
    <h3 data-v-657a4615="" id="gambler-title" style="margin: 0px; font-weight: 700;">Zocker-Tipp</h3><button data-v-657a4615="" class="btn" aria-expanded="true"><span data-v-657a4615="">Verbergen</span></button>
  </header>
  <div data-v-657a4615="" class="p-2 text-sm text-gray-800">
    <div data-v-657a4615="">Try a draw</div>
  </div>
</section>"
`;
